--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:14.17.6
 
-WORKDIR /app
+WORKDIR /web/app
 
 COPY package*.json ./
 
@@ -8,4 +8,5 @@ RUN npm install
 
 COPY . .
 
+EXPOSE 3000
 CMD ["npm","start"]
